// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader - Snapshots > matches snapshot with complex children 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  <h1>
    Page Title
  </h1>
  <p>
    Page Subtitle
  </p>
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6 custom-header"
  data-testid="container"
>
  Custom header
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with data-testid prop 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="page-header"
>
  Header with test ID
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  Header content
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with id prop 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
  id="header-id"
>
  Header with ID
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with nested children 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  <div>
    <span>
      Complex 
      <strong>
        Title
      </strong>
    </span>
    <span>
      Complex 
      <em>
        Subtitle
      </em>
    </span>
  </div>
</div>
`;

exports[`PageHeader - Snapshots > matches snapshot with simple content 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 pt-2 pb-6"
  data-testid="container"
>
  Simple content
</div>
`;
